# lectures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  actions.md  schedule.md
week01/: CMakeLists.txt  README.md
week01/include/: Bag.h  BagInterface.h  csc232.h  expanded_templates.h
week01/src/: Bag.cpp  Listing01_02.cpp  demo.cpp  main.cpp
week01/test/: test.cpp
week02/: 28-01-lec-cpp-classes.md  CMakeLists.txt  README.md
week02/src/: int_cell.cpp  int_cell.h  int_cell_inline.cpp  int_cell_inline_improved.cpp  test_int_cell.cpp  vector_example.cpp
week03/: cpp-details1.md
week03/src/: IntCell.cpp  IntCell.h
